Modified work page layout and fixed a minor layout bug in sevetal pages

--- a/myportfolio/static/scss/foundation/_footer.scss
+++ b/myportfolio/static/scss/foundation/_footer.scss
@@ -1,7 +1,6 @@
 footer {
 	text-align: center;
 	position: fixed;
-	position: absolute;
 	left: 0;
 	bottom: 0;
 	width: 100%;
