--- a/myportfolio/static/scss/parts/_about.scss
+++ b/myportfolio/static/scss/parts/_about.scss
@@ -13,6 +13,7 @@
         font-family: 'Bitter', Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
         text-align: left;
         font-weight: 700;
+        margin-bottom: 30px;
         
         @media (max-width: 768px) {  
             font-size: 24px;
@@ -26,6 +27,7 @@
         font-family: 'Bitter', Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
         text-align: left;
         font-weight: 700;
+        margin-bottom: 20px;
         
         @media (max-width: 768px) {  
             font-size: 19px;
