--- a/myportfolio/static/scss/parts/_contact.scss
+++ b/myportfolio/static/scss/parts/_contact.scss
@@ -17,6 +17,7 @@
         text-align: left;
         margin: 0;
         margin-bottom: 30px;
+        font-weight: 700;
         
         @media (max-width: 768px) { 
             font-size: 24px;
